2009-12-08 John Wu <John.Wu at ACM.org>
	* src/fileManager.cpp: move the mutex lock outside to the caller
	because most of the callers have already a mutex lock, which
	causes dead lock
	* src/whereParser.yy: introduce special cases of operator IN
	involving string literals (to address a problem reported by
	Alexandre Maurel)
	* src/qExpr.h: add qLike to represent the operator Like
	* src/whereLexer.ll, src/whereParser.yy: add LIKEOP and defintion
	of operator LIKE
	* src/category.h, src/category.cpp, src/query.cpp,
	src/countQuery.cpp, src/whereClause.cpp: update to work with
	ibis::qLike through ibis::util::strMatch

2009-12-07 John Wu <John.Wu at ACM.org>
	* win/win.Mak: remove '-o' from commands that build object files,
	visual studio has deprecated -o
	* src/array_t.cpp:301 check for nil m_begin or m_end
	* src/bitvector.cpp: 454 check for nil m_vec.begin() or
	m_vec.end()
	* src/*.cpp: address issues raised by g++ -Wall, only warnings
	left should be unused variables starting with g, which are
	ibis::util::guard objects meant to be automatically cleaned by the
	compiler
	* src/fileManager.cpp: comment out line 1161 and 1162 to prevent
	duplicate calls to fileManager::increaseUse, consolidate the
	recording of files in getFile and tryGetFile with recordFile
	(previous version may record roFile objects that have been deleted)

2009-12-06 John Wu <John.Wu at ACM.org>
	* src/util.cpp: change util::userName to prefer getpwuid_r, add
	call to delete the object pass (under valgrind, this variable is
	always shown as lost)

2009-12-05 John Wu <John.Wu at ACM.org>
	* src/qExpr.h, src/qExpr.cpp: change all 'inline virtual'
	functions to virtual functions (without inlining) (an attempt to
	reduce the linking problems on cygwin with gcc)

2009-12-04 John Wu <John.Wu at ACM.org>
	* src/qExpr.cpp: change the default option in printFull to call
	the print function, change the defaul options in both print and
	printFull to use the output stream given by Jochen Schlosser